# pokegame

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROMPT_CURSOR.md  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_leaderboard_view.py  c66ee3dc5013_allow_pokedex_number_beyond_151_for_.py
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: achievements.py  games.py  leaderboard.py  players.py  pokemon.py  stats.py
backend/app/models/: __init__.py  achievement.py  game.py  game_player.py  game_question.py  player.py  pokemon.py  stats.py
backend/app/schemas/: game.py  leaderboard.py  player.py  pokemon.py
backend/app/services/: achievement_engine.py  question_generator.py  scoring.py  stats_aggregator.py
backend/app/sockets/: game.py  lobby.py  manager.py  server.py
backend/scripts/: seed.py  seed_achievements.py
backend/tests/: conftest.py  test_question_generator.py  test_scoring.py
backend/tests/test_api/: test_pokemon.py
docs/: API.md  ARCHITECTURE.md  GAMEPLAY.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: main.tsx  routes.tsx
frontend/src/api/: achievements.ts  games.ts  leaderboard.ts  players.ts  pokemon.ts
frontend/src/hooks/: useGameRoom.ts  useReducedMotion.ts  useSocket.ts  useSound.ts  useTimer.ts
frontend/src/pages/: GamePlayPage.tsx  GameRoomPage.tsx  HomePage.tsx  LeaderboardPage.tsx  (+6 more)
nginx/: nginx.conf
(+11 files in other folders)
